--- a/la sale/views/editprofile.hbs
+++ b/la sale/views/editprofile.hbs
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lobster|Roboto:300,400,500,700&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="scripts/editprofile_script.js"> </script>
+    <script src="scripts/navbar_script.js"> </script>
 
 </head>
 <body>
@@ -78,7 +79,6 @@
             <div class="col-md-6" id="content">
                 <form class="form-group" method="post">
                     <div class="form-group form-c">
-                        <label for="images">Upload Profile Picture Link:</label>
                         <input type="text" class="form-control" id="profilepici" name="profilepici" placeholder="Picture Link">
                     </div>
                     <br>
