--- a/la sale/views/partials/navbar.hbs
+++ b/la sale/views/partials/navbar.hbs
@@ -57,8 +57,8 @@
                 </div>
             </div>
             <form class="form-inline">
-                <input class="form-control mr-sm-2" type="search" placeholder="search for an item" aria-label="Search" style="width: 500px;">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <input class="form-control mr-sm-2" type="search" placeholder="search for an item" aria-label="Search" style="width: 500px;" id="search_item">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="search_nav">Search</button>
             </form>
         </div>
     </nav>
