--- a/la sale/views/browselisting.hbs
+++ b/la sale/views/browselisting.hbs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="styles/browselisting_style.css">
     <link href="https://fonts.googleapis.com/css?family=Lobster|Roboto:300,400,500,700&display=swap" rel="stylesheet">
      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+     <script src="scripts/navbar_script.js"> </script>
 </head>
 <body>
     {{> clock}}
