--- a/la sale/views/createlisting.hbs
+++ b/la sale/views/createlisting.hbs
@@ -12,6 +12,7 @@
         <link rel="stylesheet" type="text/css" href="styles/createlisting_style.css">
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="scripts/createlisting_script.js"> </script>
+        <script src="scripts/navbar_script.js"> </script>
     </head>
 
     <body id="bodyid">
