--- a/la sale/views/pinnedlistings.hbs
+++ b/la sale/views/pinnedlistings.hbs
@@ -7,7 +7,11 @@
     <link rel="stylesheet" type="text/css" href="styles/mylistings_style.css">
     <link href="https://fonts.googleapis.com/css?family=Lobster|Roboto:300,400,500,700&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="scripts/mylistings_script.js"> </script>
+    <script src="scripts/pinnedlisting_script.js"> </script>
+    <script src="scripts/navbar_script.js"> </script>
 </head>
 <body>
     {{> clock}}
@@ -31,8 +35,9 @@
                                 <p class="card-text" > {{description}} </p>
                                 <h6 class="prices">highest bidder: @{{highestBidder}} </h6>
                                 <h6 class="prices"><span> {{highestBid}} </span>php</h6>
+                                <input type="hidden" name="_id" value="{{_id}}">
                                 <a href="/listing?listingid={{_id}}" class="btn btn-secondary btn-block bid"> View</a>  
-                                <button class="btn btn-secondary btn-block bid delete remove" id="test"> Remove Pin</a>  
+                                <button class="btn btn-secondary btn-block bid delete remove" value="{{_id}}"> Remove Pin</a>  
                             </div>
                         </div>
                     </div>
@@ -50,7 +55,7 @@
     
 
     <!-- Scripts -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
