--- a/la sale/views/profile.hbs
+++ b/la sale/views/profile.hbs
@@ -10,6 +10,7 @@
     <script src="https://kit.fontawesome.com/b203cdfa08.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="scripts/profile_script.js"></script>
+    <script src="scripts/navbar_script.js"> </script>
 </head>
 <body>
     {{> clock}}
