--- a/la sale/views/partials/navbar.hbs
+++ b/la sale/views/partials/navbar.hbs
@@ -56,9 +56,7 @@
                     <a class="dropdown-item" href="#">pets and accessories</a>
                 </div>
             </div>
-            <form class="form-inline">
-                <input class="form-control mr-sm-2" type="search" placeholder="search for an item" aria-label="Search" style="width: 500px;" id="search_item">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="search_nav">Search</button>
-            </form>
+            <input class="form-control mr-sm-2" type="search" placeholder="search for an item" aria-label="Search" style="width: 500px;" id="search_item">
+            <a href="/searchnav"+><button class="btn btn-outline-success my-2 my-sm-0" type="submit" formaction="" id="search_nav">Search</button></a>
         </div>
     </nav>
