--- a/la sale/views/partials/navbar.hbs
+++ b/la sale/views/partials/navbar.hbs
@@ -34,6 +34,11 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/logout">logout</a>
                 </li>
+                <li>
+                    <button id="test">asdasd</button>
+
+                </li>
+                
             </ul>
             
             <div class="dropdown" style="margin-right: 20px;">
@@ -54,11 +59,12 @@
                     <a class="dropdown-item" href="#">media</a>
                     <a class="dropdown-item" href="#">music</a>
                     <a class="dropdown-item" href="#">pets and accessories</a>
+
                 </div>
             </div>
-            <form class="form-inline">
+            <div class="form-inline">
                 <input class="form-control mr-sm-2" type="search" placeholder="search for an item" aria-label="Search" style="width: 500px;" id="search_item">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="search_nav">Search</button>
-            </form>
+                <button class="btn btn-outline-success my-2 my-sm-0" id="search_nav">Search</button>
+            </div>
         </div>
     </nav>
