fixed pin button

--- a/la sale/views/createlisting.hbs
+++ b/la sale/views/createlisting.hbs
@@ -74,7 +74,7 @@
                         <br>
 
                         <div class="form-group">
-                            <label for="images">Upload Image Link/s:</label>
+                            <label for="images">Image Link:</label>
                             <input type="text" class="form-control" id="images" name="images" placeholder="Image Link/s">
                         </div>
                         <br>
