--- a/la sale/views/partials/navbar.hbs
+++ b/la sale/views/partials/navbar.hbs
@@ -42,19 +42,19 @@
                   filter items
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="#">clothes</a>
-                    <a class="dropdown-item" href="#">food and drinks</a>
-                    <a class="dropdown-item" href="#">electronics</a>
-                    <a class="dropdown-item" href="#">tickets and coupons</a>
-                    <a class="dropdown-item" href="#">furniture</a>
-                    <a class="dropdown-item" href="#">beauty and wellness</a>
-                    <a class="dropdown-item" href="#">books</a>
-                    <a class="dropdown-item" href="#">hobbies and games</a>
-                    <a class="dropdown-item" href="#">sports</a>
-                    <a class="dropdown-item" href="#">accessories</a>
-                    <a class="dropdown-item" href="#">media</a>
-                    <a class="dropdown-item" href="#">music</a>
-                    <a class="dropdown-item" href="#">pets and accessories</a>
+                    <a class="dropdown-item" href="\filter?category=clothes">clothes</a>
+                    <a class="dropdown-item" href="\filter?category=food">food and drinks</a>
+                    <a class="dropdown-item" href="\filter?category=electronics">electronics</a>
+                    <a class="dropdown-item" href="\filter?category=tickets">tickets and coupons</a>
+                    <a class="dropdown-item" href="\filter?category=furniture">furniture</a>
+                    <a class="dropdown-item" href="\filter?category=beauty">beauty and wellness</a>
+                    <a class="dropdown-item" href="\filter?category=books">books</a>
+                    <a class="dropdown-item" href="\filter?category=hobbies">hobbies and games</a>
+                    <a class="dropdown-item" href="\filter?category=sports">sports</a>
+                    <a class="dropdown-item" href="\filter?category=accessories">accessories</a>
+                    <a class="dropdown-item" href="\filter?category=media">media</a>
+                    <a class="dropdown-item" href="\filter?category=music">music</a>
+                    <a class="dropdown-item" href="\filter?category=pets">pets and accessories</a>
 
                 </div>
             </div>
