--- a/la sale/views/profile.hbs
+++ b/la sale/views/profile.hbs
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lobster|Roboto:300,400,500,700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b203cdfa08.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="scripts/profile_script.js"></script>
     <script src="scripts/navbar_script.js"> </script>
 </head>
@@ -38,7 +39,8 @@
                       <div class="row">
                           <!-- Username and rating -->
                           <div class="col-md-6">
-                              <h2 id="username">@{{username}} </h2>
+                              <h2 id="username">@{{username}}</h2>
+                              <p type="hidden" id="un" value="{{username}}"></p>
                           </div>
                           
                       </div>
