--- a/la sale/views/profile.hbs
+++ b/la sale/views/profile.hbs
@@ -44,7 +44,7 @@
                           <!-- Username and rating -->
                           <div class="col-md-6">
                               <h2 id="username">@{{username}}</h2>
-                              <p type="hidden" id="un" value="{{username}}"></p>
+                              <p type="hidden" id="un" value="{{username}}">{{username}}</p>
                           </div>
                           
                       </div>
