fixed css and rating

--- a/la sale/views/mylistings.hbs
+++ b/la sale/views/mylistings.hbs
@@ -23,7 +23,7 @@
             <div class="row">
                 <script>var x=0;</script>
                 {{!-- ongoing --}}
-                <div class="title"><h1>Ongoing Listings</h1></div>
+                <div class="title " align=center><h1 class="title2" align="center">ongoing listings</h1></div>
                 <br>
                 {{#each olisting}}
                     <div class="col-md-6">
@@ -55,7 +55,7 @@
                 {{/each}}
 
                 {{!-- completed --}}
-                <div class="title"><h1>Completed Listings</h1></div>
+                <div class="title" align=center><h1 class="title2" align="center">completed listings</h1></div>
                 {{#each clisting}}
                     <div class="col-md-6">
                         <div class="card" style="width: 25rem;">
