--- a/la sale/views/styles/mylistings_style.css
+++ b/la sale/views/styles/mylistings_style.css
@@ -86,6 +86,16 @@ body{
     color: #454545;
 }
 
+.title2{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 60px;
+    line-height: 56px;
+    margin-left: 40px;
+    color: #454545;
+}
+
 #listingparticipation{
     font-family: Roboto;
     font-style: normal;
