--- a/la sale/views/styles/listing_style.css
+++ b/la sale/views/styles/listing_style.css
@@ -29,7 +29,7 @@ body {
 
 #username:hover{
     color: rgb(77, 76, 76);
-    text-transform: capitalize;
+    text-decoration: underline;
 }
 
 #username {
