--- a/la sale/views/userlogin.hbs
+++ b/la sale/views/userlogin.hbs
@@ -44,7 +44,7 @@
                 <div id="signup">
                     <h2 class="title">signup.</h2>
                     <br>
-                    <button id="signupsubmit" class="btn btn-secondary btn-block loginbtn">become an archer</button>
+                    <a href="/signup"><button id="signupsubmit" class="btn btn-secondary btn-block loginbtn">become an archer</button></a>
                 </div>
 
                 </div>
