--- a/la sale/views/partials/navbar.hbs
+++ b/la sale/views/partials/navbar.hbs
@@ -32,6 +32,9 @@
                     <a class="nav-link" href="/messages">message</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/about">about</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/logout">logout</a>
                 </li>
 
