--- a/la sale/views/browselisting.hbs
+++ b/la sale/views/browselisting.hbs
@@ -15,7 +15,7 @@
 
     <div>
         <div class="container" id="browselistings">
-            <h1 id="browse">browse listings</h1>
+            <h1 id="browse">browse</h1>
             <div class="row">
                 <script>
                     x = 0;
