--- a/la sale/views/createlisting.hbs
+++ b/la sale/views/createlisting.hbs
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>createlisting</title>
+        <title>start a bid</title>
 
         
         <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
