--- a/la sale/views/editlisting.hbs
+++ b/la sale/views/editlisting.hbs
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>editlisting</title>
+        <title>edit a listing</title>
 
         
         <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
