--- a/la sale/views/about.hbs
+++ b/la sale/views/about.hbs
@@ -38,6 +38,7 @@
                       <li class="list-group-item">Jquery</li>
                       <li class="list-group-item">Jquery Countdown</li>
                       <li class="list-group-item">Bootstrap</li>
+                      <li class="list-group-item">MongoDB Atlas Azure</li>
                       <li class="list-group-item">Mongoose</li>
                       <li class="list-group-item">Mongodb</li>
                       <li class="list-group-item">Google Fonts</li>
