--- a/la sale/views/listing.hbs
+++ b/la sale/views/listing.hbs
@@ -37,7 +37,7 @@
 			<a href="/profile?username={{username}}">
 				<div class="col-md" id="userhandle">
 					<img src= {{{userpic}}} id="userpic">
-					<p id="username"> @{{username}} </p>
+					<p id="username"> {{username}} </p>
 				</div>
 			</a>
 		</div>
