--- a/la sale/views/partials/navbar.hbs
+++ b/la sale/views/partials/navbar.hbs
@@ -35,7 +35,7 @@
                     <a class="nav-link" href="/about">about</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/logout">logout</a>
+                    <a class="nav-link" href="/">logout</a>
                 </li>
 
             </ul>
