--- a/la sale/views/listing.hbs
+++ b/la sale/views/listing.hbs
@@ -37,7 +37,7 @@
 			<a href="/profile?username={{username}}">
 				<div class="col-md" id="userhandle">
 					<img src= {{{userpic}}} id="userpic">
-					<p id="username"> {{username}} </p>
+					<p id="username"> @{{username}} </p>
 				</div>
 			</a>
 		</div>
@@ -125,7 +125,7 @@
 		</div>
 
 		<div class="col-md infoval">
-			<p><span id="highestbid"> {{highestbid}} </span> php</p>
+			<p><span id="highestbid"> {{highestbid}} </span></p>
 		</div>
 		</div>
 
@@ -136,7 +136,7 @@
 			</div>
 
 			<div class="col-md infoval">
-				<p><a id="highestbidder" href="/profile?username={{highestbidderun}}"> @{{highestbidderun}} </a></p>
+				<p><a id="highestbidder" href="/profile?username={{highestbidderun}}"> {{highestbidderun}} </a></p>
 			</div>
 			</div>
 
