--- a/la sale/views/profile.hbs
+++ b/la sale/views/profile.hbs
@@ -119,7 +119,7 @@
       <!-- Active Listings -->
       <div>
           <div class="container" id="activelistings">
-            <h1 id="active">active listings</h1>
+            <h1 id="active" class="title2">active listings</h1>
               <div class="row" id="listings">
                   
                   <script>
