--- a/la sale/views/styles/profile_style.css
+++ b/la sale/views/styles/profile_style.css
@@ -25,6 +25,18 @@ body{
     object-fit: cover;
 }
 
+.title2{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 60px;
+    line-height: 56px;
+    margin-left: 40px;
+    margin-bottom: 60px;
+    color: #454545;
+}
+
+
 #collapserating {
     width: 150px;
     margin-left:90px;
