--- a/la sale/views/about.hbs
+++ b/la sale/views/about.hbs
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>success</title>
+        <title>about</title>
 
         
         <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
