number input type and messages email

--- a/la sale/views/createlisting.hbs
+++ b/la sale/views/createlisting.hbs
@@ -59,12 +59,12 @@
                         <br>
 
                         <div class="form-group">
-                            <input type="text" class="form-control" id="startprice" name="startprice" placeholder="Starting Price">
+                            <input type="number" class="form-control" id="startprice" name="startprice" placeholder="Starting Price">
                         </div>
                         <br>
 
                         <div class="form-group">
-                            <input type="text" class="form-control" id="buyout" name="buyout" placeholder="Buy-out Price">
+                            <input type="number" class="form-control" id="buyout" name="buyout" placeholder="Buy-out Price">
                         </div>
                         <br>
 
