--- a/la sale/views/messages.hbs
+++ b/la sale/views/messages.hbs
@@ -32,7 +32,7 @@
         <p class="lead">Send an email to a fellow archer to contact each other. </p>
         <hr class="my-4">
         <!-- <input type="text" class="form-control" id="message"> -->
-        <input  type="text" class="form-control" placeholder="to" id="emailreceiver">
+        <input  type="text" class="form-control" placeholder="{{email}}" id="emailreceiver">
     
         <textarea id="message"></textarea>
 
