--- a/la sale/views/editlisting.hbs
+++ b/la sale/views/editlisting.hbs
@@ -28,7 +28,7 @@
                     <form id="editlisting" method="post">
                 
                         <div class="form-group">
-                            <input type="text" class="form-control" id="buyout" name="buyout" placeholder="Buy-out Price">
+                            <input type="number" class="form-control" id="buyout" name="buyout" placeholder="Buy-out Price">
                         </div>
                         <br>
 
