--- a/la sale/views/listing.hbs
+++ b/la sale/views/listing.hbs
@@ -148,7 +148,7 @@
 	<div class="container" id="useractions">
 		<div class="form-row">
 			<div class="col-md-8">
-				<input type="text" class="form-control" placeholder="price" id="price">
+				<input type="number" class="form-control" placeholder="price" id="price">
 			</div>
 			<div class="col-md-4">
 			<button class="btn btn-secondary" id="raisebid" name="raisebid">raise bid</button>
