--- a/la sale/views/partials/navbar.hbs
+++ b/la sale/views/partials/navbar.hbs
@@ -29,7 +29,7 @@
                     <a class="nav-link" href="/createlisting">create listing</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/messages">message</a>
+                    <a class="nav-link" href="/messages?email=none">message</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/about">about</a>
