--- a/la sale/views/signup.hbs
+++ b/la sale/views/signup.hbs
@@ -81,7 +81,7 @@
                         <br>
 
                         <div class="form-group">
-                            <input type="text" class="form-control" id="idnum" name="idnum" placeholder="id number">
+                            <input type="number" class="form-control" id="idnum" name="idnum" placeholder="id number">
                         </div>
                         <br>
                         <input type="submit" class="btn btn-secondary btn-block registerbtn" value="register" id="register">
