--- a/la sale/views/listing.hbs
+++ b/la sale/views/listing.hbs
@@ -146,6 +146,7 @@
 	<br><br>
 
 	<div class="container" id="useractions">
+		<input type="hidden" id="sessionun" value="{{sessionun}}">
 		<div class="form-row">
 			<div class="col-md-8">
 				<input type="number" class="form-control" placeholder="price" id="price">
