--- a/la sale/views/profile.hbs
+++ b/la sale/views/profile.hbs
@@ -57,6 +57,7 @@
                             
     
                           <div class="collapse" id="collapserating">
+                              <input type="range" class="custom-range" min="0" max="5" step="1" id="customRange2">
                               <div class="card card-body bg-light mb-3" style="color: #454545;">
                                 <select class="custom-select mr-sm-2" id="ratings">
                                     <option value="1.0">1</option>
