server-side validation for signup

--- a/la sale/views/signup.hbs
+++ b/la sale/views/signup.hbs
@@ -66,7 +66,7 @@
                         <div class="form-group">
                             <input type="password" class="form-control" id="confirmpassword" name="confirmpassword" placeholder="confirm password">
                         </div>
-                        <p class="error" id="confirmPasswordError">{{confirmPasswordError}}</p>
+                        <p class="error" id="confirmPasswordError">{{confirmpasswordError}}</p>
                         <br>
 
                         <div class="form-group" id="collegee">
@@ -88,7 +88,7 @@
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="birthday" onfocus="(this.type='date')" name="bday" id="bday">
                         </div>
-                        <p class="error" id="birthdayError">{{birthdayError}}</p>
+                        <p class="error" id="birthdayError">{{bdayError}}</p>
                         <br>
 
                         <div class="form-group">
