--- a/la sale/views/userlogin.hbs
+++ b/la sale/views/userlogin.hbs
@@ -13,7 +13,7 @@
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="scripts/userlogin_script.js"></script>
-
+         <script src="scripts/validator.min.js" type="text/javascript"></script>
     </head>
 
     <body id="bodyid">
@@ -36,7 +36,7 @@
                         <div class="form-group">
                             <input type="password" class="form-control" id="password" name="password" placeholder="password">
                         </div>
-                        <input type="submit" class="btn btn-secondary btn-block loginbtn" id="submitlogin" value="login">
+                        <input type="submit" class="btn btn-secondary btn-block loginbtn" id="submitlogin" value="login" disabled>
                         <p id="msg"> </p>
 
                     </form>
