--- a/la sale/views/editlisting.hbs
+++ b/la sale/views/editlisting.hbs
@@ -10,11 +10,14 @@
         <!-- BootstrapCDN -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="styles/editlisting_style.css">
-        {{!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script> --}}
+        
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        <script src="scripts/validator.min.js" type="text/javascript"></script>
         <script src="scripts/editlisting_script.js"> </script>
         <script src="scripts/navbar_script.js"> </script>
-         <script src="scripts/validator.min.js" type="text/javascript"></script>
+        
     </head>
 
     <body id="bodyid">
@@ -32,6 +35,7 @@
                         <div class="form-group">
                             <input type="number" class="form-control" id="buyout" name="buyout" placeholder="Buy-out Price">
                         </div>
+                        <p class="error" id="buyoutError">meron</p>
                         <br>
 
                         <div class="form-group">
@@ -49,10 +53,11 @@
                             <label for="enddate">Bid End Date and Time:</label>
                             <input type="datetime-local" class="form-control" id="enddate" name="enddate">
                         </div>
+                        <p class="error" id="endDateError"></p>
                         <input type="hidden" name="_id" value="{{_id}}">
                         <br>
 
-                        <button type="submit" class="btn btn-secondary btn-block confirmbtn" formaction="/editlisting" id="confirm">confirm</button>
+                        <button type="submit" class="btn btn-secondary btn-block confirmbtn" formaction="/editlisting" id="confirm" disabled>confirm</button>
                         <button type="submit" class="btn btn-danger btn-block" formaction="/deletelisting?_id={{_id}}" id="delete">delete</button>
                         <p id="msg"> </p>
                         
@@ -65,8 +70,8 @@
         </div>
 
 
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+ 
     </body>
 
 </html>
