--- a/la sale/views/messages.hbs
+++ b/la sale/views/messages.hbs
@@ -11,7 +11,9 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" type="text/css" rel="stylesheet">
 
     <!-- Scripts -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    {{!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script> --}}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="scripts/validator.min.js" type="text/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     
@@ -31,13 +33,18 @@
         <h1 id="listings">a message.</h1>
         <p class="lead">Send an email to a fellow archer to contact each other. </p>
         <hr class="my-4">
-        <!-- <input type="text" class="form-control" id="message"> -->
-        <input  type="text" class="form-control" placeholder="{{email}}" id="emailreceiver">
-    
-        <textarea id="message"></textarea>
+        <div id="alerts"></div>
+        <label for = 'emailsender' class='lead'>archer username</label>
+        <input  type="text" class="form-control" value="{{username}}" id="emailreceiver">
+
+        <label for = 'message' class='lead'>message</label>
+        <textarea id="message" ></textarea>
 
         <button type="button" class="btn btn-secondary " id="sendmail" data-toggle="button" aria-pressed="false"><i class="fas fa-paper-plane"></i> send</button>
       </div>
+
+      
+      
     </div>
     
 
