user cannot bid to himself

--- a/la sale/views/listing.hbs
+++ b/la sale/views/listing.hbs
@@ -38,6 +38,7 @@
 				<div class="col-md" id="userhandle">
 					<img src= {{{userpic}}} id="userpic">
 					<p id="username"> @{{username}} </p>
+					<input type='hidden' value = {{username}} id='seller'>
 				</div>
 			</a>
 		</div>
