editted view session profile

--- a/la sale/views/profile.hbs
+++ b/la sale/views/profile.hbs
@@ -51,7 +51,8 @@
                       </div>
                       <br>
                       <div class="row">
-                        
+                        <input type="hidden" id="session" value={{session}}>
+                        <input type="hidden" id="un" value={{username}}>
                         <div class="col-md"  id="buttons">
                             <span><a class="btn btn-secondary btn-sm" href="/messages?username={{username}}" id="message" name="message"><i class="far fa-envelope"></i> </a> </span>
                             <button type="button" class="btn btn-secondary btn-sm" id="rate" name="rate" data-toggle="collapse" data-target="#collapserating" aria-expanded="false" aria-controls="collapserating"><i class="fas fa-percentage"></i></button>
