--- a/la sale/views/editprofile.hbs
+++ b/la sale/views/editprofile.hbs
@@ -79,9 +79,9 @@
         <div class="row">
             <div class="col-md-3"></div>
             <div class="col-md-6" id="content">
-                <form class="form-group" method="post"> 
+                <form class="form-group" method="post" enctype="multipart/form-data"> 
                     <div class="form-group form-c">
-                        <input type="text" class="form-control" id="profilepici" name="profilepici" placeholder="Picture Link">
+                        <input type="file" class="form-control" id="profilepici" name="profilepici" placeholder="Picture Link">
                     </div>
                     <br>
                     <div class="form-group">
