--- a/la sale/views/editprofile.hbs
+++ b/la sale/views/editprofile.hbs
@@ -81,7 +81,7 @@
             <div class="col-md-6" id="content">
                 <form class="form-group" method="post" enctype="multipart/form-data"> 
                     <div class="form-group form-c">
-                        <input type="file" class="form-control" id="profilepici" name="profilepici" placeholder="Picture Link">
+                        <input type="file" class="form-control" id="profilepici" name="profilepici" placeholder="Picture Link" accept='image/x-ong,image/gif,image/jpeg'>
                     </div>
                     <br>
                     <div class="form-group">
