servers ide validations

--- a/views/createlisting.hbs
+++ b/views/createlisting.hbs
@@ -81,7 +81,7 @@
                         <br>
 
                         <div class="form-group">
-                            <label for="images">Image Link:</label>
+                            <label for="images">Product Image</label>
                             <input type="file" class="form-control" id="images" name="images" placeholder="Image Link/s" accept='image/x-ong,image/gif,image/jpeg'>
                         </div>
                         <p class="error" id="imagesError">{{imagesError}}</p>
