--- a/views/editlisting.hbs
+++ b/views/editlisting.hbs
@@ -44,7 +44,7 @@
                         <br>
 
                         <div class="form-group">
-                            <label for="images">Upload Image Link/s:</label>
+                            <label for="images">Upload Image:</label>
                             <input type="file" accept='image/x-ong,image/gif,image/jpeg' class="form-control" id="images" name="images" placeholder="Image Link/s">
                         </div>
                         <br>
