--- a/views/editprofile.hbs
+++ b/views/editprofile.hbs
@@ -80,6 +80,7 @@
             <div class="col-md-3"></div>
             <div class="col-md-6" id="content">
                 <form class="form-group" method="post" enctype="multipart/form-data"> 
+                    <label for="profilepici">Profile Picture</label>
                     <div class="form-group form-c">
                         <input type="file" class="form-control" id="profilepici" name="profilepici" placeholder="Picture Link" accept='image/x-ong,image/gif,image/jpeg'>
                     </div>
